--- a/必须要懂的原生JS/测试题.md
+++ b/必须要懂的原生JS/测试题.md
@@ -10,6 +10,21 @@ alert(a)
 a = 6;
 a();
 ```
+解析：同变量名的情况下，同时var的变量提升优先级比函数声明优先级低，所以以上的代码js解析成如下
+```js
+function a() {
+  alert(10);
+}
+var a;
+alert(a);
+a = 3;
+alert(a);
+a = 6;
+a();
+```
+答案:依次弹出 function a() {
+  alert(10)
+} -> 10 -> 3 -> 然后报错a is a not function
 - 2.请写出如下输出值，并写出把注释掉代码取消注释的值，并解释为什么？
 ```js
 this.a = 30;
