--- a/必须要懂的原生JS/测试题.md
+++ b/必须要懂的原生JS/测试题.md
@@ -40,10 +40,12 @@ var test = {
     return go;
   }
 }
-// var p = test.init();
-// p();
-new(test.init())();
+var p = test.init(); // 打印30，因为箭头里的this指向的是window
+p(); // 没有通过new关键字的话，就会当成普通函数执行，此时p的函数引用是go函数，this指向window
+new(test.init())(); // 打印30因为箭头函数的指向的this是window，然后打印50,这时候找到的go原型链的50
 ```
+答案:
+
 继续
 ```js
 var num = 1;
@@ -56,9 +58,9 @@ function yideng2() {
 }
 (function() {
   'use strict';
-  yideng2();
+  yideng2();// 打印2,严格模式只在yideng2方法执行的方法体里作用
 })();
-yideng();
+yideng(); // 报错，在严格模式下this不指向window
 ```
 拓展题
 ```js
@@ -74,8 +76,9 @@ function C3(name) {
 C1.prototype.name = 'yideng';
 C2.prototype.name = 'lao';
 C3.prototype.name = 'yuan';
-console.log((new C1().name) + (new C2().name) + (new C3().name));
+console.log((new C1().name) + (new C2().name) + (new C3().name)); // 依次打印yideng，undefined,fe
 ```
+答案：C1因为没有传name，默认所以没有执行if语句，所以往原型链找name，C2因为没有传name的话默认，参数默认就是undefined,C3没有传的话给个‘fe’的初始值
 - 3.请写出如下点击li的输出值,并用三种方法正确输出li里的数字。
 ```html
 <ul>
@@ -92,6 +95,26 @@ for (var i = 0; i < list_li.length; i++) {
   list_li[i].onclick = function() {
     console.log(i)
   }
+}
+// 第一种
+for (var i = 0; i < list_li.length; i++) {
+  list_li[i].onclick = function() {
+    console.log(this.innerHTML)
+  }
+}
+// 第二种
+for (let i = 0; i < list_li.length; i++) {
+  list_li[i].onclick = function() {
+    console.log(i + 1)
+  }
+}
+// 第三种
+for (var i = 0; i < list_li.length; i++) {
+  (function(j) {
+    list_li[i].onclick = function() {
+      console.log(j + 1)
+    }
+  })(i);
 }
 </script>
 ```
